--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "mcp-client",
+  "name": "electron-node-app",
   "private": true,
   "version": "0.0.0",
   "main": "dist-electron/main.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc -b && vite build && electron-builder",
-    "preview": "vite preview",
-    "electron:dev": "vite --mode development",
-    "electron:build": "vue-tsc -b && vite build && electron-builder",
-    "electron:preview": "electron ."
+    "dev": "vite --mode development",
+    "start": "electron .",
+    "build": "vue-tsc -b && vite build && electron-builder"
   },
   "build": {
     "win": {
@@ -22,11 +19,16 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.39.0",
+    "@heroicons/vue": "^2.2.0",
     "@modelcontextprotocol/sdk": "^1.8.0",
     "dotenv": "^16.4.7",
+    "iconv-lite": "^0.6.3",
     "markdown-it": "^14.1.0",
     "replicate": "^1.0.1",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-json-pretty": "^2.4.0",
+    "winston": "^3.17.0",
+    "typescript": "^5.5.4"
   },
   "devDependencies": {
     "@types/markdown-it": "^14.1.2",
@@ -34,7 +36,8 @@
     "@vue/tsconfig": "^0.7.0",
     "electron": "^35.1.2",
     "electron-builder": "^26.0.12",
-    "typescript": "~5.7.2",
+    "concurrently": "^9.1.0",
+    "@types/node": "^22.9.0",
     "vite": "^6.2.0",
     "vite-plugin-electron": "^0.29.0",
     "vite-plugin-electron-renderer": "^0.14.6",
