--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "vite --mode development",
     "start": "electron .",
-    "build": "vue-tsc -b && vite build && electron-builder"
+    "build": "vue-tsc -b && vite build && electron-builder",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "type-check": "vue-tsc --noEmit",
+    "electron:build": "npm run build"
   },
   "build": {
     "win": {
@@ -25,19 +28,24 @@
     "iconv-lite": "^0.6.3",
     "markdown-it": "^14.1.0",
     "replicate": "^1.0.1",
+    "typescript": "^5.5.4",
     "vue": "^3.5.13",
     "vue-json-pretty": "^2.4.0",
-    "winston": "^3.17.0",
-    "typescript": "^5.5.4"
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/markdown-it": "^14.1.2",
+    "@types/node": "^22.9.0",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.7.0",
+    "concurrently": "^9.1.0",
     "electron": "^35.1.2",
     "electron-builder": "^26.0.12",
-    "concurrently": "^9.1.0",
-    "@types/node": "^22.9.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-vue": "^9.22.0",
     "vite": "^6.2.0",
     "vite-plugin-electron": "^0.29.0",
     "vite-plugin-electron-renderer": "^0.14.6",
