--- a/package.json
+++ b/package.json
@@ -26,18 +26,19 @@
     "@modelcontextprotocol/sdk": "^1.8.0",
     "dotenv": "^16.4.7",
     "iconv-lite": "^0.6.3",
+    "isomorphic-dompurify": "^2.23.0",
     "markdown-it": "^14.1.0",
     "replicate": "^1.0.1",
-    "typescript": "^5.5.4",
     "vue": "^3.5.13",
+    "vue-dompurify-html": "^5.2.0",
     "vue-json-pretty": "^2.4.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/markdown-it": "^14.1.2",
     "@types/node": "^22.9.0",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.7.0",
@@ -46,6 +47,7 @@
     "electron-builder": "^26.0.12",
     "eslint": "^8.57.1",
     "eslint-plugin-vue": "^9.22.0",
+    "typescript": "~5.3.0",
     "vite": "^6.2.0",
     "vite-plugin-electron": "^0.29.0",
     "vite-plugin-electron-renderer": "^0.14.6",
